--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Kerem</title>
+        <title>Kerem' Programming Work</title>
     </head>
     <body>
     </body>
