--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Kerem' Programming Work</title>
     </head>
     <body>
-    <img src="csc106_banner">
+    <img src="csc106_banner.jpg">
     </body>
 </html>
