--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
     <img src="csc106_banner.jpg">
+    <img src="pasted image 0.jpg">
+    <img src="pasted image 1.jpg">
+    <img src="pasted image 2.jpg">        
     </body>
 </html>
