--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Kerem' Programming Work</title>
     </head>
     <body>
-    <img src="csc106_banner.jpg">
+    <center><img src="csc106_banner.jpg"><center>
     <img src="pasted image 0.jpg">
     <img src="pasted image 1.jpg">
     <img src="pasted image 2.jpg">        
