--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Kerem' Programming Work</title>
     </head>
     <body>
-    <p align="center"><img src="csc106_banner.jpg">
+    <p align="center">
+        <img src="csc106_banner.jpg"></p>
     <img src="pasted image 0.jpg">
     <img src="pasted image 1.jpg">
     <img src="pasted image 2.jpg">        
