--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
     <p align="center">
         <img src="csc106_banner.jpg"></p>
-    <img src="pasted image 0.jpg">
+    
+     <p align="center">   
+     <img src="pasted image 0.jpg">
     <img src="pasted image 1.jpg">
     <img src="pasted image 2.jpg">        
     </body>
