--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <img src="csc106_banner.jpg"></p>
     
      <p align="center">   
-     <img src="pasted image 0.jpg">
-    <img src="pasted image 1.jpg">
-    <img src="pasted image 2.jpg">        
+     
+         <a href="index.html><img src="home.png"alt="home button"></a>
+         <a href="javascripts.html><img src="javascripts.png"alt="javascripts button"></a>
+         <a href="aboutme.html><img src="aboutme.png"alt="about me button"></a>     
     </body>
 </html>
