--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,10 @@
     </head>
     <body>
       <h1>About Me </h1>
-      <p> Hi, my name is <strong>Kerem Erkmen<strong>. I was born in Texas but I live in Turkey since I was 1 years old. I'm majoring in <strong>Computer Science<strong> at the University of Rhode Island.
-          I got the attenton from video games. I did not decide my job but I think I want to continue on <strong>Cyber Security<strong>. I'm also sailing since I was 7, I'm looking for 
-          new friends. My instagram is <em>@kerokero1907<em>. </p>
+      <p> Hi, my name is <strong>Kerem Erkmen</strong>. I was born in Texas but I live in Turkey since I was 1 years old.
+          I'm majoring in <strong>Computer Science</strong> at the <a href="https://www.uri.edu"><em>University of Rhode Island</em></a>.
+          I got the attenton from video games. I did not decide my job but I think I want to continue on <strong>Cyber Security</strong>.
+          I'm also sailing since I was 7, I'm looking for new friends. My instagram is <em>@kerokero1907</em>. </p>
 
     </body>
 </html>
