--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <<meta charset="utf-8">
         <title>About me</title>
-        <meta charset="utf-8">
     </head>
     <body>
       <h1>About Me </h1>
