--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
         <p> Hi, my name is <strong>Kerem Erkmen</strong>. I was born in Dallas/Texas but I'm living in Istanbul/Turkey for 17 years. I'm majoring in Computer Science at the <a href="https://www.uri.edu/"><em>University of Rhode Island</em></a>. 
           I'm sailing since 2010 and also a member of the <a href="https://www.urisailing.org/"><em>URI Sailing Team</em></a>. I got my interest from online video game.
           I did not decided what to do but right now I want to learn more about Cyber Security. 
-          If you want to contact with me, my instagram is <a href="https://www.instagram.com/kerokero1907/"><strong>@kerokero1907</strong></a>
+          If you want to contact with me, my instagram is <a href="https://www.instagram.com/kerokero1907/"><strong>@kerokero1907.</strong></a>
         
       </p>
 
