--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <body>
     <p align="center">
         <img src="csc106_banner.jpg"></p>
-        <table width:40>
+        <table width:"40%">
     
      <p align="center">   
      
