--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
     <p align="center">
         <img src="csc106_banner.jpg"></p>
-    
+        <table width:"40%">
      <p align="center">   
      
         <a href="index.html"><img src="home.png" alt="home button"></a>
