--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
     <p align="center">
-        <img src="myBanner.jpg"></p>
+        <img src="myBannerr.jpg"></p>
         <table width:"40%">
      <p align="center">   
      
