--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="javascripts.html"><img src="javascripts.png" alt="javascript button"></a>
         <a href="aboutme.html"><img src="aboutme.png"alt="about me button"></a>
    
-      <p style="text-align:center">Welcome to Kerem's Programming Portfolio Website</p>                                                               
+      <h1 style="text-align:center">Welcome to Kerem's Programming Portfolio Website</h1>                                                               
          
         <h1>Welcome to Kerem's Programming Portfolio Website</h1>                                                                 
     
