--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     </head>
     <body>
       <p align="center">
-        <img src="myBanner.jpg"></p>
+        <img src="myBannerr.jpg"></p>
     
      <p align="center">   
      
