--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <table width:"70%">
      <p align="center">   
      
-        <a href="index.html"><img src="home.png" alt="home button"></a>
-        <a href="javascripts.html"><img src="javascripts.png" alt="javascript button"></a>
-        <a href="aboutme.html"><img src="aboutme.png"alt="about me button"></a>
+        <a href="index.html"><img src="Homee.png" alt="home button"></a>
+        <a href="javascripts.html"><img src="Javascriptss.png" alt="javascript button"></a>
+        <a href="aboutme.html"><img src="AboutMee.png"alt="about me button"></a>
    
       <h1 style="text-align:center">Welcome to Kerem's Programming Portfolio Website</h1>                                                               
          
