--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <p align="center">   
         <img src="keremyelken.jpg"></p>
         <table width:"70%">    
+        <p align="center">     
             
             </body>
 </html>
