--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     </head>
     <body>
     <p align="center">
-        <img src="myBannerr.jpg"></p>
-        <table width:"70%">
+        <img src="myBannerr.jpg"
+        width="400" 
+        height="500" />
        <p align="center"> 
      
         <a href="index.html"><img src="Homee.png" alt="home button"></a>
