--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     </head>
     <body>
     <p align="center">
-        <img src="myBannerr.jpg"
-        width="700" 
-        height="400" />
+        <img src="myBannerr.jpg"</p>
+       
        <p align="center"> 
      
         <a href="index.html"><img src="Homee.png" alt="home button"></a>
