--- a/aboutme.html
+++ b/aboutme.html
@@ -21,6 +21,12 @@
           I'm sailing since 2010 and also a member of the <a href="https://www.urisailing.org/"><em>URI Sailing Team</em></a>. I got my interest from online video game.
           I did not decided what to do but right now I want to learn more about Cyber Security. 
           If you want to contact with me, my instagram is <a href="https://www.instagram.com/kerokero1907/"><strong>@kerokero1907.</strong></a></p>      
-        
-   </body>
+     
+        <p align="center">   
+        <img src="keremyelken.jpg"
+        width="600" 
+        height="300" /> 
+        <p align="center">       
+   
+    </body>
 </html>
