--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             The website must look good for taking attention but this is my first time trying to make one.</p>                                                                  
     
      <p align="center">   
-        <img src="keremyumurta.jpg"
+        <img src="keremyumurta.png"
         width="600" 
         height="300" /> 
         <p align="center">      
