--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
            <td id="buttons"><a href="index.html"><img src="Homee.png" alt="home button"></a></td>
         <td id="buttons"><a href="javascripts.html"><img src="Javascriptss.png" alt="javascript button"></a></td>
         <td id="buttons"><a href="aboutme.html"><img src="AboutMee.png"alt="about me button"></a></td>
-   
-      <h1 style="text-align:center">Welcome to Kerem's Programming Portfolio Website</h1>                                                               
+   <td id="buttons"><a href="index.html"><img src="apps.png" alt="apps button"></a></td>
+      
+        <h1 style="text-align:center">Welcome to Kerem's Programming Portfolio Website</h1>                                                               
          
        <p style="text-align:center">My name is Kerem Erkmen.I'm a student at URI and this portfolio is going to show my works in coding.
             The website must look good for taking attention but this is my first time trying to make one.</p>                                                                  
