--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
          <td id=buttons"><a href="index.html"><img src="Homee.png" alt="home button"></a></td>
         <td id="buttons"><a href="javascripts.html"><img src="Javascriptss.png" alt="javascript button"></a></td>
         <td id="buttons"><a href="aboutme.html"><img src="AboutMee.png"alt="about me button"></a></td>
-        <td id="buttons"><a href="index.html"><img src="apps.png" alt="apps button"></a></td>
+        <td id="buttons"><a href="apps.html"><img src="apps.png" alt="apps button"></a></td>
   
         <h1 style="text-align:center">About Me</h1>
         <p style="text-align:center">Hi, my name is <strong>Kerem Erkmen</strong>. I was born in Dallas/Texas but I'm living in Istanbul/Turkey for 17 years. I'm majoring in Computer Science at the <a href="https://www.uri.edu/"><em>University of Rhode Island</em></a>. 
