--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            <td id="buttons"><a href="index.html"><img src="Homee.png" alt="home button"></a></td>
         <td id="buttons"><a href="javascripts.html"><img src="Javascriptss.png" alt="javascript button"></a></td>
         <td id="buttons"><a href="aboutme.html"><img src="AboutMee.png"alt="about me button"></a></td>
-   <td id="buttons"><a href="index.html"><img src="apps.png" alt="apps button"></a></td>
+   <td id="buttons"><a href="apps.html"><img src="apps.png" alt="apps button"></a></td>
       
          </tr>
         </thead>   
