--- a/apps.html
+++ b/apps.html
@@ -17,7 +17,7 @@
         <td id="buttons"><a href="aboutme.html"><img src="AboutMee.png"alt="about me button"></a></td>
         <td id="buttons"><a href="apps.html"><img src="apps.png" alt="apps button"></a></td>
   
-        <h1>Apps</h1>  
+        <h1 style="text-align:center">Apps</h1> 
               
    
     </body>
