--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="kerem.css">
       
         <style>
-        <button style="padding:20px;">home button</button>   
+        .buttons  {
+           padding:20px;  
+         }
         </style>
     
     </head>
