--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="kerem.css">
       
         <style>
-        .home button  {
+        .buttons  {
            padding:20px;  
          }
         </style>
