--- a/javascripts.html
+++ b/javascripts.html
@@ -38,5 +38,7 @@
         <h2><a href="https://www.khanacademy.org/computer-programming/erkmen_resizebitmoji/4534832956751872">erkmen_resizeBitmoji.</a></h2>
         <script src="https://www.khanacademy.org/computer-programming/erkmen_resizebitmoji/4534832956751872/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     
+        <h2><a href="https://www.khanacademy.org/computer-programming/erkmen_decision/4606485707407360">erkmen_decision</a></h2>
+        <script src="https://www.khanacademy.org/computer-programming/erkmen_decision/4606485707407360/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     </body>
 </html>
