--- a/javascripts.html
+++ b/javascripts.html
@@ -50,6 +50,8 @@
         <h2><a href="https://www.khanacademy.org/computer-programming/erkmen_tag/6724068741005312">erkmen_Tag</a></h2>
         <script src="https://www.khanacademy.org/computer-programming/erkmen_tag/6724068741005312/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     
+        <h2><a href="https://www.khanacademy.org/computer-programming/erkmen_contacts/6745092706582528">erkmen_contacts</a></h2>
+        <script src="https://www.khanacademy.org/computer-programming/erkmen_contacts/6745092706582528/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     
     </body>
 </html>
