--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,8 @@
         <a href="javascripts.html"><img src="Javascriptss.png" alt="javascript button"></a>
         <a href="aboutme.html"><img src="AboutMee.png"alt="about me button"></a>
         <a href="apps.html"><img src="apps.png" alt="apps button"></a>
-  
+        <a href="finalproject.html"><img src="finalproject.jpg" alt="final project button"></a>
+        
         <h1 style="text-align:center">About Me</h1>
         <p style="text-align:center">Hi, my name is <strong>Kerem Erkmen</strong>. I was born in Dallas/Texas but I'm living in Istanbul/Turkey for 17 years. I'm majoring in Computer Science at the <a href="https://www.uri.edu/"><em>University of Rhode Island</em></a>. 
           I'm sailing since 2010 and also a member of the <a href="https://www.urisailing.org/"><em>URI Sailing Team</em></a>. I got my interest from online video game.
