--- a/apps.html
+++ b/apps.html
@@ -16,7 +16,7 @@
         <a href="javascripts.html"><img src="Javascriptss.png" alt="javascript button"></a>
         <a href="aboutme.html"><img src="AboutMee.png"alt="about me button"></a>
         <a href="apps.html"><img src="apps.png" alt="apps button"></a>
-  
+        <a href="finalproject.html"><img src="finalproject.jpg" alt="final project button"></a>
         
              
    
