--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="javascripts.html"><img src="Javascriptss.png" alt="javascript button"></a>
         <a href="aboutme.html"><img src="AboutMee.png"alt="about me button"></a>
      <a href="apps.html"><img src="apps.png" alt="apps button"></a>
-      
+     <a href="finalproject.html"><img src="finalproject.jpg" alt="final project button"></a> 
          <h1 style="text-align:center">Welcome to Kerem's Programming Portfolio Website</h1>                                                               
          
        <p style="text-align:center">My name is Kerem Erkmen.I'm a student at URI and this portfolio is going to show my works in coding.
