--- a/javascripts.html
+++ b/javascripts.html
@@ -15,7 +15,7 @@
         <a href="javascripts.html"><img src="Javascriptss.png" alt="javascript button"></a>
         <a href="aboutme.html"><img src="AboutMee.png"alt="about me button"></a>
         <a href="apps.html"><img src="apps.png" alt="apps button"></a>
-        
+        <a href="finalproject.html"><img src="finalproject.jpg" alt="final project button"></a>
         <h1 style="text-align:center">Javascripts</h1>
         
         <p style="text-align:center">This webpage has a collection of Javascripts programs that I have wrote in my CSC106 course.</p>
