--- a/finalproject.html
+++ b/finalproject.html
@@ -20,7 +20,7 @@
         
         <h1 style="text-align:center">Final Project</h1>
         <p style="text-align:center">Hi, my name is <strong>Kerem Erkmen</strong>. This is my final project with Gabriel Pratt. This game is for coders who likes drawing. 
-        The game is based on clicking the correct number which has numbers on it with different colors. 
+        The game is based on clicking the correct squares which has numbers on it with different colors. 
         So you need to press the color then match the squares which has the same number. We have three different shapes to draw. I wish you will enjoy.</p>     
    
     </body>
