--- a/finalproject.html
+++ b/finalproject.html
@@ -23,5 +23,8 @@
         The game is based on clicking the correct squares which has numbers on it with different colors. 
         So you need to press the color then match the squares which has the same number. We have three different shapes to draw. I wish you will enjoy.</p>     
    
+        <h2><a href="https://www.khanacademy.org/computer-programming/paint-by-number-4/5700919377313792">paint-by-number 4</a></h2>
+        <script src="https://www.khanacademy.org/computer-programming/paint-by-number-4/5700919377313792/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+   
     </body>
 </html>
