--- a/finalproject.html
+++ b/finalproject.html
@@ -21,9 +21,9 @@
         <h1 style="text-align:center">Final Project</h1>
         <p style="text-align:center">Hi, my name is <strong>Kerem Erkmen</strong>. This is my final project with Gabriel Pratt. This game is for coders who likes drawing. 
         The game is based on clicking the correct squares which has numbers on it with different colors. 
-        So you need to press the color then match the squares which has the same number. We have three different shapes to draw.You can watch this game video by clicking here. 
-        I wish you will enjoy.</p>     
- https://youtu.be/JZNs7QLMuFg
+        So you need to press the color then match the squares which has the same number. We have three different shapes to draw.
+        You can watch this game video by clicking <a href=" https://youtu.be/JZNs7QLMuFg"><em>here</em></a>. I wish you will enjoy.</p>     
+
    
 
         <h2><a href="https://www.khanacademy.org/computer-programming/paint-by-number-4/5700919377313792">paint-by-number 4</a></h2>
