--- a/finalproject.html
+++ b/finalproject.html
@@ -23,11 +23,9 @@
         The game is based on clicking the correct squares which has numbers on it with different colors. 
         So you need to press the color then match the squares which has the same number. We have three different shapes to draw.
         You can watch this game video by clicking <a href=" https://youtu.be/JZNs7QLMuFg"><em>here</em></a>. I wish you will enjoy.</p>     
-
-   
-
-        <h2><a href="https://www.khanacademy.org/computer-programming/paint-by-number-4/5700919377313792">paint-by-number 4</a></h2>
-        <script src="https://www.khanacademy.org/computer-programming/paint-by-number-4/5700919377313792/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
-   
+        
+        <h2><a href="https://www.khanacademy.org/computer-programming/final-project/5108527037202432">final project</a></h2>
+        <script src="https://www.khanacademy.org/computer-programming/final-project/5108527037202432/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+    
     </body>
 </html>
